--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "graphql.macro": "^1.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-tradingview-widget": "^1.3.2",
     "realm-web": "^0.4.0",
     "recharts": "^1.8.5"
