change robots, add firebase analytics, make chart switch to most recently added ticker

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 REACT_APP_REALM_ID=test-realm-fxkhq
+REACT_APP_FIREBASE_API=AIzaSyDQX4Ok-_SmceHFnd98ZqOkYqBaEy9q6u4
+REACT_APP_FIREBASE_SENDER=513834265001
+REACT_APP_FIREBASE_APP=1:513834265001:web:7d58560c5337a7c9167cb8
+REACT_APP_FIREBASE_MEAS=G-ZZ6CCQ39XK
+
