--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apollo-link-context": "^1.0.20",
+    "firebase": "^7.19.0",
     "graphql": "^15.1.0",
     "graphql.macro": "^1.4.2",
     "react": "^16.13.1",
